--- a/src/app.css
+++ b/src/app.css
@@ -1,17 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@800&family=Quicksand:wght@700&display=swap');
+
+:root {
+	--font-title: 'Barlow Condensed';
+	--font-title-weight: 800;
+	--font-body: 'Quicksand';
+	--font-body-weight: 700;
+	--color-bg: #222222;
+}
+
 body {
-	background-color: #222222;
-	font-family: monospace;
+	background-color: var(--color-bg);
+	font-family: var(--font-body);
+	font-weight: var(--font-body-weight);
 	margin: 0;
 }
 
 button {
+	color: var(--color-bg);
 	cursor: pointer;
-	font-size: 1.1rem;
+	font-size: 1.6rem;
 	background-color: white;
-	padding: 0.8em 1.2em;
+	padding: 0.5em 1em;
 	border-radius: 0.5rem;
 	border: 2px solid black;
-	font-family: monospace;
+	font-family: var(--font-title);
+	font-weight: var(--font-title-weight);
 	transition: 0.3s;
 }
 
