feat: pulse pickCard button

--- a/src/app.css
+++ b/src/app.css
@@ -49,3 +49,19 @@ button.success {
 button.fail {
 	background-color: #f38179;
 }
+
+@keyframes pulse {
+	0% {
+		scale: 1;
+	}
+	50% {
+		scale: 1.05;
+	}
+	100% {
+		scale: 1;
+	}
+}
+
+.pulse {
+	animation: 1.5s pulse infinite ease-in-out;
+}
